_performance-golf/pg-ai/_codex/codex/codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plugin_detail_popup_installable.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Plugins
<<<<<<< HEAD
  Figma · ChatGPT Marketplace
  Can be installed
=======
  Figma · Can be installed · ChatGPT Marketplace
  Data shared with this app is subject to the app's terms of service and privacy policy. Learn
  more.
>>>>>>> origin/main
  Turn Figma files into implementation context.

› 1. Back to plugins  Return to the plugin list.
  2. Install plugin   Install this plugin now.
<<<<<<< HEAD
  3. Skills           design-review, extract-copy
  4. Apps             Figma, Slack
  5. MCP Servers      figma-mcp, docs-mcp
=======
     Skills           design-review, extract-copy
     Apps             Figma, Slack
     MCP Servers      figma-mcp, docs-mcp
>>>>>>> origin/main

  Press esc to close.
