_performance-golf/pg-ai/_codex/codex/codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plugins_popup_loading_state.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Plugins
  Loading available plugins...
  This first pass shows the ChatGPT marketplace only.

<<<<<<< HEAD
› 1. Loading plugins...  This updates when the marketplace list is ready.
=======
›    Loading plugins...  This updates when the marketplace list is ready.
>>>>>>> origin/main
